# RayTracer

./: .gitignore  CMakeLists.txt  README.md  generate_project.bat
src/: main.cpp
src/private/camera/: camera.cpp
src/private/color/: color.cpp
src/private/hittable/: hittable.cpp  hittable_list.cpp  sphere.cpp
src/private/interval/: interval.cpp
src/private/material/: material.cpp
src/public/camera/: camera.h
src/public/color/: color.h
src/public/hittable/: hittable.h  hittable_list.h  sphere.h
src/public/interval/: interval.h
src/public/material/: material.h
src/public/math/: constants.h  math_utils.h
src/public/ray/: ray.h
src/public/vec/: vec3.h
